# smart-rag

./: .env.example  .gitignore  CLAUDE.md  README.md  prd.md  pyproject.toml  requirements.txt
specs/001-pdf-rag-search/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-pdf-rag-search/checklists/: requirements.md
specs/001-pdf-rag-search/contracts/: cli-interface.md
src/: __init__.py
src/cli/: __init__.py  main.py
src/models/: __init__.py  chunk.py  config.py  document.py  response.py
src/services/: __init__.py  chunker.py  generator.py  indexer.py  pdf_extractor.py  retriever.py
tests/: __init__.py
tests/fixtures/sample_pdfs/: create_fixtures.py
